--- a/06_DOM/03.html
+++ b/06_DOM/03.html
@@ -18,5 +18,9 @@
     //log prefer ye karte h
     const addText = document.createTextNode("chai aur code");
     div.appendChild(addText);
+
+    // toh ab isse oosme show kaise karre, kuch iss tarah 
+
+    document.body.appendChild(div)
   </script>
 </html>
