--- a/06_DOM/04.html
+++ b/06_DOM/04.html
@@ -30,9 +30,22 @@
 
     //Edit: editing value
     const secondLang = document.querySelector("li:nth-child(2)")
+    // console.log(secondLang);
     // secondLang.innerHTML = "Mojo"
     const newLi = document.createElement('li')
+    // console.log(newLi);
     newLi.textContent = "Mojo"
+    // console.log(newLi.textContent);
     secondLang.replaceWith(newLi)
+
+    //edit
+
+    const firstLang = document.querySelector("li:first-child")
+    firstLang.outerHTML = "<li>TypeScript</li>"
+
+    //remove
+
+    const lastlang = document.querySelector('li:last-child')
+    lastlang.remove()
   </script>
 </html>
